@@ -1,9 +1,9 @@
 import logging
 import os
-
-import functools
 import warnings
 from configparser import ConfigParser
+from functools import lru_cache
+from typing import Dict, List, Optional
 
 import fsboot
 from fsbc.paths import Paths
@@ -30,18 +30,17 @@ class FSGSDirectories(object):
         cls._initialized = True
 
     @classmethod
-    @functools.lru_cache()
-    def get_base_dir(cls):
+    @lru_cache()
+    def get_base_dir(cls) -> str:
         path = fsboot.base_dir()
-        if not os.path.exists(path):
-            os.makedirs(path)
         # Configuration and file database depends on path normalization,
         # especially for cross-platform portable mode.
         path = Paths.get_real_case(path)
+        print("FSGSDirectories.get_base_dir =", repr(path))
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def portable_config(cls):
         portable_ini = os.path.join(cls.get_base_dir(), "Portable.ini")
         if os.path.exists(portable_ini):
@@ -52,7 +51,7 @@ class FSGSDirectories(object):
         return {}
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def portable_dir(cls, name):
         config = cls.portable_config()
         try:
@@ -62,7 +61,7 @@ class FSGSDirectories(object):
         return os.path.join(cls.get_base_dir(), path)
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_configurations_dir(cls):
         path = cls.portable_dir("configurations_dir")
         if not path:
@@ -76,7 +75,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_controllers_dir(cls):
         path = cls.portable_dir("controllers_dir")
         if not path:
@@ -90,7 +89,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_kickstarts_dir(cls):
         path = cls.portable_dir("kickstarts_dir")
         if not path:
@@ -104,7 +103,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def downloads_dir(cls):
         path = cls.portable_dir("downloads_dir")
         if not path:
@@ -122,7 +121,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_floppies_dir(cls):
         path = cls.portable_dir("floppies_dir")
         if not path:
@@ -136,7 +135,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_hard_drives_dir(cls):
         path = cls.portable_dir("hard_drives_dir")
         if not path:
@@ -150,7 +149,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_cdroms_dir(cls):
         path = cls.portable_dir("cdroms_dir")
         if not path:
@@ -164,7 +163,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_logs_dir(cls):
         path = cls.portable_dir("logs_dir")
         if not path:
@@ -175,7 +174,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_data_dir(cls):
         path = cls.portable_dir("data_dir")
         if not path:
@@ -186,7 +185,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def databases_dir(cls):
         path = os.path.join(cls.get_data_dir(), "Databases")
         if not os.path.exists(path):
@@ -194,7 +193,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def images_dir(cls):
         path = os.path.join(cls.get_data_dir(), "Images")
         if not os.path.exists(path):
@@ -202,7 +201,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def media_dir(cls):
         path = cls.portable_dir("media_dir")
         if not path:
@@ -213,7 +212,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def images_dir_for_sha1(cls, sha1):
         path = os.path.join(cls.images_dir(), sha1[:2])
         # if not os.path.exists(path):
@@ -221,12 +220,12 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_launcher_dir(cls):
         return cls.get_data_dir()
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_titles_dir(cls):
         path = cls.portable_dir("titles_dir")
         if not path:
@@ -237,7 +236,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def saves_dir(cls):
         path = cls.portable_dir("saves_dir")
         if not path:
@@ -248,7 +247,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_save_states_dir(cls):
         path = cls.portable_dir("save_states_dir")
         if not path:
@@ -262,7 +261,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def screenshots_output_dir(cls):
         path = Settings.instance()["screenshots_output_dir"]
         if not path:
@@ -274,7 +273,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_screenshots_dir(cls):
         path = cls.portable_dir("screenshots_dir")
         if not path:
@@ -285,14 +284,14 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_images_dir(cls):
         cls._initialize()
         path = cls.get_base_dir()
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_covers_dir(cls):
         path = cls.portable_dir("covers_dir")
         if not path:
@@ -303,7 +302,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_themes_dir(cls):
         path = cls.portable_dir("themes_dir")
         if not path:
@@ -316,7 +315,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_plugins_dir(cls):
         path = cls.portable_dir("plugins_dir")
         if not path:
@@ -329,7 +328,7 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_cache_dir(cls):
         path = cls.portable_dir("cache_dir")
         if not path:
@@ -341,37 +340,37 @@ class FSGSDirectories(object):
         return path
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_files_dirs(cls):
         paths = [cls.get_floppies_dir(), cls.get_cdroms_dir()]
         return paths
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_titles_dirs(cls):
         paths = [cls.get_titles_dir()]
         return paths
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_screenshots_dirs(cls):
         paths = [cls.get_screenshots_dir()]
         return paths
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_images_dirs(cls):
         paths = [cls.get_images_dir()]
         return paths
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_covers_dirs(cls):
         paths = [cls.get_covers_dir()]
         return paths
 
     @classmethod
-    @functools.lru_cache()
+    @lru_cache()
     def get_themes_dirs(cls):
         paths = [cls.get_themes_dir()]
         return paths
